[project]
name = "database-backup-utility"
version = "0.1.0"
description = "A CLI tool for backing up and restoring databases (SQLite, MySQL, PostgreSQL, MongoDB)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "typer>=0.20.1",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
mysql = ["mysql-connector-python>=8.2.0"]
postgres = ["psycopg2-binary>=2.9.9"]
all = [
    "mysql-connector-python>=8.2.0",
    "psycopg2-binary>=2.9.9",
]

[project.scripts]
db-backup = "db_backup.cli.app:app"
